--- a/hw4/Part-A/Makefile
+++ b/hw4/Part-A/Makefile
@@ -7,7 +7,7 @@
 ### Last Modified: Nov 2014 WB, WR, LR
 ###
 
-SDK_INSTALL_PATH :=  /usr/local/cuda
+SDK_INSTALL_PATH :=  /cm/shared/apps/cuda11.7/toolkit/11.7.1
 NVCC=$(SDK_INSTALL_PATH)/bin/nvcc
 LIB       :=  -L$(SDK_INSTALL_PATH)/lib64 -L$(SDK_INSTALL_PATH)/samples/common/lib/linux/x86_64
 #INCLUDES  :=  -I$(SDK_INSTALL_PATH)/include -I$(SDK_INSTALL_PATH)/samples/common/inc
@@ -15,7 +15,7 @@ OPTIONS   :=  -O3
 #--maxrregcount=100 --ptxas-options -v 
 
 TAR_FILE_NAME  := YourNameCUDA1.tar
-EXECS :=  vecadd00 vecadd01 matmult00
+EXECS :=  matmult00 matmult01
 all:$(EXECS)
 
 #######################################################################
@@ -57,11 +57,11 @@ matmult00 : matmult.cu  matmultKernel.h matmultKernel00.o timer.o
 
 #######################################################################
 ## Expanded Kernel, notice that FOOTPRINT_SIZE is redefined (from 16 to 32)
-### matmultKernel01.o : matmultKernel01.cu matmultKernel.h
-###	${NVCC} $< -c -o $@ $(OPTIONS) -DFOOTPRINT_SIZE=32
-###
-### matmult01 : matmult.cu  matmultKernel.h matmultKernel01.o timer.o
-###	${NVCC} $< matmultKernel01.o -o $@ $(LIB) timer.o $(OPTIONS) -DFOOTPRINT_SIZE=32
+matmultKernel01.o : matmultKernel01.cu matmultKernel.h
+	${NVCC} $< -c -o $@ $(OPTIONS) -DFOOTPRINT_SIZE=32
+
+matmult01 : matmult.cu  matmultKernel.h matmultKernel01.o timer.o
+	${NVCC} $< matmultKernel01.o -o $@ $(LIB) timer.o $(OPTIONS) -DFOOTPRINT_SIZE=32
 
 
 
